# jarvis

./: .env.template  AGENTS.md  CONTRIBUTING.md  DESIGN.md  LICENSE.md  README.md  database.sql  docker-compose.override.yml  docker-compose.yml
backend/: .gitignore  AGENTS.override.md  README.md  main.py  pyproject.toml  socketio_server.py
backend/migrations/: 202606040001.py
backend/scripts/: README.md  compile_mjml_templates.py  generate_migration.py  migrate.py  script.py  sync_blocked_email_domains.py
backend/src/: environment.py
backend/src/core/: authenticator.py  crypto.py  dbal.py  logger.py  request_metadata.py  security.py  session_cookie.py  storage.py
backend/src/middleware/: authentication.py
backend/src/model/: router.py
backend/src/repository/: access_token.py  admin_user.py  announcement.py  app_setting.py  blocked_email_domain.py  contact_submission.py  email_log.py  newsletter_subscription.py  token.py  user.py
backend/src/routers/: admin.py  default.py  google_auth.py  users.py
backend/src/service/: admin_users.py  announcement.py  email.py  google_auth.py  newsletter.py  system_limits.py  traffic_log_ingestion.py  user.py
backend/src/templates/: __init__.py
backend/src/templates/email/: __init__.py  _footer.fallback.html  _footer.mjml  _header.fallback.html  _header.mjml  account_deletion.fallback.html  account_deletion.mjml  newsletter_welcome.fallback.html  newsletter_welcome.mjml  renderer.py  reset_password.fallback.html  reset_password.mjml  verification.fallback.html  verification.mjml  welcome.fallback.html  welcome.mjml
(+126 files in other folders)
