[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "boto3==1.35",
    "cryptography>=44.0.3",
    "fastapi==0.112.0",
    "fastapi-cors>=0.0.6",
    "fastapi-mail>=1.4.2",
    "numpy>=2.0.0",
    "google-auth>=2.40.2",
    "google-genai>=1.49.0",
    "openai==1.68.0",
    "pillow>=10.4.0",
    "pillow-heif>=0.17.0",
    "psycopg[binary,pool]>=3.2.7",
    "pyjwt>=2.10.1",
    "rawpy>=0.23.1",
    "python-multipart>=0.0.20",
    "python-socketio==5.11.0",
    "requests==2.32",
    "sentry-sdk[fastapi]>=2.27.0",
    "tiktoken>=0.9.0",
    "uvicorn==0.30.6",
    "jinja2>=3.1.0",
]
